--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/bin/python"
+    "python.pythonPath": "C:\\Users\\Rehman\\Anaconda3\\envs\\rstudio\\python.exe"
 }
