--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,38 @@
 Babel==2.8.0
+backcall==0.1.0
 bcrypt==3.1.7
-bleach==3.1.5
+Beaker==1.11.0
+bleach==3.1.4
 blinker==1.4
-certifi==2020.4.5.1
-cffi==1.14.0
-chardet==3.0.4
-click==7.1.2
-dnspython==1.16.0
-email-validator==1.1.0
-Flask==1.1.2
+Flask==1.1.1
+Flask-BabelEx==0.9.4
 Flask-Bcrypt==0.7.1
-flask-censor==0.1
+Flask-Compress==1.4.0
+Flask-Gravatar==0.5.0
 Flask-Login==0.5.0
 Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.4.1
+Flask-Migrate==2.5.2
+Flask-Paranoid==0.2.0
+Flask-Principal==0.4.0
+Flask-Script==2.0.6
+Flask-Security==3.0.0
+Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.3
-html5lib==1.0.1
-idna==2.9
 itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.14.1
+Jinja2==2.11.1
+jsonschema==3.2.0
+lockfile==0.12.2
 MarkupSafe==1.1.1
-numpy==1.18.4
-packaging==20.3
-Pillow==7.1.2
-pkg-resources==0.0.0
-profanity-check==1.0.3
-pycparser==2.20
-pyparsing==2.4.7
+npyscreen==4.10.5
+numpy==1.18.1
+pandas==1.0.0
+pandocfilters==1.4.2
+Pillow==6.2.1
 python-dateutil==2.8.1
-pytz==2020.1
 requests==2.23.0
-scikit-learn==0.23.0
-scipy==1.4.1
-six==1.14.0
-SQLAlchemy==1.3.16
-threadpoolctl==2.0.0
-urllib3==1.25.9
+SQLAlchemy==1.3.13
+urllib3==1.25.8
 webencodings==0.5.1
-Werkzeug==1.0.1
-WTForms==2.3.1
+Werkzeug==1.0.
+WTForms==2.2.1
+zipp==3.1.0
